syntax = "proto3";

option java_multiple_files = true;
//生成java代码的package
option java_package = "raft.rpcmodule.requestvote";
//创建的javaBean的文件名
option java_outer_classname = "RequestVoteProto";
// 可以生成rpc接口
//option java_generic_services = true;

package raft;

//声明一个服务名称
service RequestVoteService {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
}

//请求
message RequestVoteRequest {
  string name = 1;
}

//响应
message RequestVoteResponse {
  string message = 1;
}